# cd-adapt-vqe

cd_adapt_vqe/: .gitignore  LICENSE  README.md  pyproject.toml
cd_adapt_vqe/cd_adapt_vqe/: __init__.py  agp_pool.py  schedule.py  solver.py  utils.py
cd_adapt_vqe/comparisons/adapt_vqe/: adapt_vqe_BeH2.py  adapt_vqe_comparison_HF_v2.py  adapt_vqe_comparison_LiH.py
cd_adapt_vqe/comparisons/counterdiabatic/: cd_algorithm.py  cluster_code_adapt_cd.py  digitized_cd.py
cd_adapt_vqe/data/BeH2/: BeH2_CD_ADAPT_Curva_Disociacion_025_finaal.xlsx  BeH2_CD_ADAPT_l1.xlsx  BeH2_CD_ADAPT_l2_t025.xlsx  BeH2_CD_ADAPT_l2_t075.xlsx  BeH2_test_CD_ADAPT_Curva_Disociacion_PARALELA.xlsx
cd_adapt_vqe/data/HF/: HF_CD_ADAPT_l1.xlsx
cd_adapt_vqe/data/LiH/: LiH_CD_ADAPT_Curva_Disociacion_l1.xlsx  LiH_CD_ADAPT_data_l2_t025.xlsx  LiH_CD_ADAPT_data_l2_t075.xlsx
cd_adapt_vqe/examples/: dissociation_curve.py
